test/ASTGen/attrs_objc.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) %s %dump-parse -import-objc-header %S/Inputs/objc_decls.h -enable-experimental-feature ParserASTGen \
// RUN:   | %sanitize-address > %t/astgen.ast
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) %s %dump-parse -import-objc-header %S/Inputs/objc_decls.h \
// RUN:   | %sanitize-address > %t/cpp-parser.ast

// RUN: %diff -u %t/astgen.ast %t/cpp-parser.ast
// RUN: %target-typecheck-verify-language %clang-importer-sdk -import-objc-header %S/Inputs/objc_decls.h -enable-experimental-feature ParserASTGen 

// REQUIRES: executable_test
// REQUIRES: language_language_parser
// REQUIRES: objc_interop
// REQUIRES: language_feature_ParserASTGen

@objc class MyCls {
  @objc(theValue) var value: Int { 1 }
  @objc(barWithX:Y:) fn foo(x: Int, y: Int) {}
}

@objc @implementation extension ObjCClass {
    var theValue: String? {
        get { "" }
        set {}
    }
    @objc(methodWithX:Y:)
    fn methodWith(x: Int, y: Int) {}
}
@objc @implementation(Category1) extension ObjCClass {} // expected-error {{Objective-C category should be specified on '@objc', not '@implementation'}}
@objc(Category2) @implementation extension ObjCClass {}

@_objcImplementation extension ObjCClass2 {} // expected-warning {{'@_objcImplementation' is deprecated; use '@implementation' instead}}

@_objcRuntimeName(RenamedClass) class ThisWillBeRenamed {}

@_language_native_objc_runtime_base(NSMagicBase) class TestNativeObjCRuntimeBase {}

fn testPoundObjC() {
  immutable _: String = #keyPath(ObjCClass.theValue)
  immutable _: Selector = #selector(getter:ObjCClass.theValue)
  immutable _: Selector = #selector(ObjCClass.methodWith(x:y:))
}
